<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    android:orientation="vertical"
    tools:showIn="@layout/activity_main">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:id="@+id/editName"
        android:hint="@string/name"

        /><EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:id="@+id/editAddress"
        android:hint="@string/address"

        /><EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:id="@+id/editPhone"
        android:inputType="phone"
        android:hint="@string/phone"

        />/><EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:id="@+id/editEmail"
        android:hint="@string/email"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">


            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:layout_marginLeft="16dp"
                android:background="@color/colorAccent"
                android:id="@+id/buttonOne"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:text="@string/button1"
                />


            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:layout_marginLeft="16dp"
                android:background="@color/colorAccent"
                android:layout_marginRight="16dp"
                android:id="@+id/buttonTwo"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:text="@string/button2"
                />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:layout_marginLeft="16dp"
            android:background="@color/colorAccent"
            android:layout_marginRight="16dp"
            android:id="@+id/buttonThree"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:text="@string/button3"
            />



    </LinearLayout>


</LinearLayout>